--- a/templates/home.html
+++ b/templates/home.html
@@ -6,7 +6,7 @@
     <h1 class="display-4">Hello, world!</h1>
     <p class="lead">This is it</p>
     <hr class="my-4">
-    <p> esto es un puto ejemplo</p>
+    <p> esto es un puto ejemplo alv</p>
     <a class="btn btn-primary btn-lg" href="#" role="button">Aprende más</a>
 </div>
 
